<resources>
    <string name="app_name">HelloWorld</string>

    <string name="video_tab_1">Hot Videos</string>
    <string name="video_tab_2">Categories</string>
    <string name="loading">Loading</string>
    <string name="disconnect">Failed to connect internet</string>

    //header
    <string name="header_morning">Good Morning</string>
    <string name="header_aftnoon">Good Afternoon</string>
    <string name="header_evening">Good Evening</string>
    <string name="header_night">Good Night</string>
    <string name="header_now">Now is </string>

    //menu item
    <string name="menu_video">Videos</string>
    <string name="menu_version">Version</string>
    <string name="menu_about">About us</string>
    <string name="menu_news">News</string>
    <string name="menu_recently">History</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_save">Save</string>
    <string name="menu_remove">Remove</string>

    //Video
    <string name="video_title">title</string>
    <string name="video_artist_name">artist_name</string>
    <string name="video_date_published">date_published</string>
    <string name="video_avatar">avatar</string>
    <string name="video_file_mp4">file_mp4</string>

    //Fragments String
    <string name="header_list_recommen">Recommended</string>
    <string name="header_list_suggest">Suggested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //intent
    <string name="intent_video">video</string>
    <string name="intent_url">url</string>
    <string name="intent_category">category</string>
    <string name="itent_category_hot">hot_video</string>

    //rss
    <string name="key_goc_nhin">goc-nhin</string>
    <string name="news_url">news_url</string>

    <string name="rss_key_src">src</string>
    <string name="rss_key_alt">alt</string>
    <string name="rss_key_data_original">data-original</string>
    <string name="rss_key_tag_img">img</string>
    <string name="rss_key_tag_a">a</string>
    <string name="rss_key_tag_title">title</string>
    <string name="rss_key_tag_h4">h4</string>
    <string name="rss_key_tag_li">li</string>
    <string name="rss_key_tag_href">href</string>

    <string name="rss_key_article_element_text">Normal</string>
    <string name="rss_key_article_element_img">tplCaption</string>
    <string name="rss_key_article_element_slide_show">block_thumb_slide_show</string>

    <string name="rss_key_suggest_title_list">list_title</string>


    //reently
    <string name="tab_recently_video">Videos</string>
    <string name="tab_recently_news">News</string>
    //saved

    <string name="tab_saved_video">Videos</string>
    <string name="tab_saved_news">News</string>
</resources>
