<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news"></item>
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_video"
            android:title="@string/menu_video"></item>
        <item
            android:id="@+id/nav_recently"
            android:icon="@drawable/ic_recently"
            android:title="@string/menu_recently"></item>
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_saved"></item>
        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_version"
            android:title="@string/menu_version"></item>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"></item>
    </group>
</menu>